--- a/Pipfile
+++ b/Pipfile
@@ -18,4 +18,6 @@ isort = "*"
 yapf = "*"
 
 [packages]
-junit_reports = {path = ".", editable = true}
+junit_reports = {path = ".",editable = true}
+junitparser = "*"
+tabulate = "*"
